--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,15 @@ services:
     ports:
       - "8080:8080"
     container_name: main_service_container
+    depends_on:
+      - guestBookService
 
   guestBookService:
     image: guestbookservice:latest
     ports:
-      - "8081:8080"
+      - "8081:8081"
     container_name: guestbook_service_container
+
+networks:
+  app-network:
+    driver: bridge
