--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'otelDemo'
 
-include 'mainService', 'guestBookService'
+include 'mainService', 'guestBookService', 'dataBaseService'
