--- a/dataBaseService/src/main/resources/application.properties
+++ b/dataBaseService/src/main/resources/application.properties
@@ -4,5 +4,14 @@ server.port=8082
 spring.datasource.url=jdbc:mysql://mysql:3306/mydatabase
 spring.datasource.username=root
 spring.datasource.password=rootpassword
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
+spring.sql.init.data-locations=classpath:data.sql
+
