--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     container_name: main_service_container
     depends_on:
       - guestBookService
+    networks:
+      - app-network
 
   guestBookService:
     image: guestbookservice:latest
@@ -16,6 +18,8 @@ services:
     container_name: guestbook_service_container
     depends_on:
       - dataBaseService
+    networks:
+      - app-network
 
   dataBaseService:
     image: databaseservice:latest
