--- a/docker-compose-otel.yaml
+++ b/docker-compose-otel.yaml
@@ -14,6 +14,9 @@ services:
     environment:
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
+      JAVA_TOOL_OPTIONS: "-javaagent:/otel/opentelemetry-javaagent.jar"
+    volumes:
+      - ./otel:/otel
 
   guestBookService:
     image: guestbookservice:latest
@@ -24,6 +27,10 @@ services:
       - dataBaseService
     networks:
       - app-network
+    environment:
+      JAVA_TOOL_OPTIONS: "-javaagent:/otel/opentelemetry-javaagent.jar"
+    volumes:
+      - ./otel:/otel
 
   dataBaseService:
     image: databaseservice:latest
@@ -34,6 +41,10 @@ services:
       - mysql
     networks:
       - app-network
+    environment:
+      JAVA_TOOL_OPTIONS: "-javaagent:/otel/opentelemetry-javaagent.jar"
+    volumes:
+      - ./otel:/otel
 
   mysql:
     image: mysql:8.0
@@ -58,6 +69,9 @@ services:
     environment:
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
+      JAVA_TOOL_OPTIONS: "-javaagent:/otel/opentelemetry-javaagent.jar"
+    volumes:
+      - ./otel:/otel
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -65,6 +79,21 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    networks:
+      - app-network
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.46
+    container_name: jaeger
+    ports:
+      - "5775:5775/udp"
+      - "6831:6831/udp"
+      - "6832:6832/udp"
+      - "5778:5778"
+      - "16686:16686"
+      - "14268:14268"
+      - "14250:14250"
+      - "9411:9411"
     networks:
       - app-network
 
