--- a/emailService/src/main/resources/application.properties
+++ b/emailService/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=8083
 
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
+
+# OpenTelemetry Configuration
+otel.traces.exporter=otlp
+otel.exporter.otlp.endpoint=http://jaeger:4317
+otel.resource.attributes=service.name=otelDemo
+
