--- a/dataBaseService/src/main/resources/application.properties
+++ b/dataBaseService/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.data-locations=classpath:data.sql
 
+# OpenTelemetry Configuration
+otel.traces.exporter=otlp
+otel.exporter.otlp.endpoint=http://jaeger:4317
+otel.resource.attributes=service.name=otelDemo
+
+
