--- a/guestBookService/src/main/resources/application.properties
+++ b/guestBookService/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=guestBookService
 server.port=8081
 
+# OpenTelemetry Configuration
+otel.traces.exporter=otlp
+otel.exporter.otlp.endpoint=http://jaeger:4317
+otel.resource.attributes=service.name=otelDemo
+
