--- a/mainService/Dockerfile
+++ b/mainService/Dockerfile
@@ -3,6 +3,7 @@ FROM openjdk:21-jdk-slim
 WORKDIR /app
 
 COPY build/libs/mainService-0.0.1-SNAPSHOT.jar app.jar
+ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar /otel/opentelemetry-javaagent.jar
 
 EXPOSE 8080
 
