--- a/mainService/src/main/resources/application.properties
+++ b/mainService/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8080
 
 spring.rabbitmq.host=rabbitmq
 spring.rabbitmq.port=5672
+
+# OpenTelemetry Configuration
+otel.traces.exporter=otlp
+otel.exporter.otlp.endpoint=http://jaeger:4317
+otel.resource.attributes=service.name=otelDemo
