--- a/mainService/Dockerfile
+++ b/mainService/Dockerfile
@@ -2,8 +2,10 @@ FROM openjdk:21-jdk-slim
 
 WORKDIR /app
 
-COPY build/libs/mainService-0.0.1-SNAPSHOT.jar app.jar
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar /otel/opentelemetry-javaagent.jar
+
+COPY build/libs/mainService-0.0.1-SNAPSHOT.jar app.jar
 
 EXPOSE 8080
 
