--- a/docker-compose-otel.yaml
+++ b/docker-compose-otel.yaml
@@ -45,8 +45,10 @@ services:
       - "8082:8082"
     container_name: database_service_container
     depends_on:
-      - mysql
-      - jaeger
+      mysql:
+        condition: service_healthy
+      jaeger:
+        condition: service_started
     networks:
       - app-network
     environment:
@@ -69,6 +71,11 @@ services:
       - "3306:3306"
     networks:
       - app-network
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      interval: 3s
+      timeout: 20s
+      retries: 10
 
   emailservice:
     image: emailservice:latest
@@ -76,8 +83,10 @@ services:
       - "8083:8083"
     container_name: email_service_container
     depends_on:
-      - rabbitmq
-      - jaeger
+      rabbitmq:
+        condition: service_healthy
+      jaeger:
+        condition: service_started
     networks:
       - app-network
     environment:
@@ -95,6 +104,11 @@ services:
       - "15672:15672"
     networks:
       - app-network
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 3s
+      timeout: 30s
+      retries: 5
 
   jaeger:
     image: jaegertracing/all-in-one:1.46
