--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     environment:
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
+    ##TODO add healthcheck
 
   guestBookService:
     image: guestbookservice:latest
@@ -38,7 +39,8 @@ services:
       - "8082:8082"
     container_name: database_service_container
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - app-network
     healthcheck:
@@ -57,6 +59,10 @@ services:
       - "3306:3306"
     networks:
       - app-network
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
 
   emailservice:
     image: emailservice:latest
@@ -64,12 +70,14 @@ services:
       - "8083:8083"
     container_name: email_service_container
     depends_on:
-      - rabbitmq
+      rabbitmq:
+        condition: service_healthy
     networks:
       - app-network
     environment:
       RABBITMQ_HOST: rabbitmq
       RABBITMQ_PORT: 5672
+    ##TODO add healthcheck
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -79,6 +87,11 @@ services:
       - "15672:15672"
     networks:
       - app-network
+    healthcheck:
+      test: rabbitmq-diagnostics -q ping
+      interval: 3s
+      timeout: 30s
+      retries: 3
 
 networks:
   app-network:
