--- a/opsEngine/build.gradle
+++ b/opsEngine/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     compileOnly("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
     testImplementation("io.micronaut:micronaut-http-client")
+    implementation("io.micronaut.views:micronaut-views-thymeleaf")
+    implementation("io.micronaut:micronaut-websocket")
 }
 
 
