--- a/opsEngine/src/main/resources/application.properties
+++ b/opsEngine/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+micronaut.server.cors.enabled=true
+micronaut.server.cors.configurations.default.allowed-origins=http://localhost:4000
+micronaut.server.cors.configurations.default.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+micronaut.server.cors.configurations.default.allowed-headers=Content-Type,Authorization
+micronaut.server.cors.configurations.default.allow-credentials=true
 micronaut.server.port=3030
 micronaut.views.enabled=true
 micronaut.views.default-extension=html
