--- a/mainService/Dockerfile
+++ b/mainService/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
 ADD https://github.com/open-telemetry/opentelemetry-java-instrumentation/releases/latest/download/opentelemetry-javaagent.jar /otel/opentelemetry-javaagent.jar
 
 COPY build/libs/mainService-0.0.1-SNAPSHOT.jar app.jar
+COPY meta-agent.jar meta-agent.jar
 
 EXPOSE 8080
 
